Fix Delete All button spacing

--- a/project1/public/style.css
+++ b/project1/public/style.css
@@ -59,3 +59,6 @@ li {
 .delete-form { margin: 0; }
 
 #form { text-align: center; }
+
+#form div + div { margin-top: 15px; }
+
